// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DelegateRow should emit action on select button 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="sc-AxhUy iIfeGO group"
        data-testid="TableRow"
      >
        <td
          class="w-1"
        >
          <div
            class="sc-AxhCb hyGNjM"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK mr-4"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb cGAXHi font-bold"
          >
            <span>
              arkx
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb cGAXHi font-bold text-theme-neutral-dark"
          >
            <span>
              #
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb cGAXHi font-bold text-theme-neutral-dark"
          >
            <span>
              %
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb cGAXHi justify-center"
          >
            <div
              class="sc-AxirZ iQaTP text-xl text-theme-primary"
              height="1em"
              width="1em"
            >
              <svg>
                msq.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb cGAXHi font-bold text-theme-neutral-dark"
          >
            <span>
              ...
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb cGAXHi font-bold text-theme-neutral-dark"
          >
            <span>
              ...
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb cGAXHi font-bold text-theme-neutral-dark"
          >
            <span>
              ...
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb cGAXHi font-bold text-theme-neutral-dark"
          >
            <span>
              ...
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb yHtWA justify-end"
          >
            <button
              class="sc-AxjAm fPpool"
              color="primary"
              data-testid="DelegateRow__toggle-0"
              type="button"
            >
              Select
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRow should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="sc-AxhUy iIfeGO group"
        data-testid="TableRow"
      >
        <td
          class="w-1"
        >
          <div
            class="sc-AxhCb hyGNjM"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK mr-4"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb cGAXHi font-bold"
          >
            <span>
              arkx
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb cGAXHi font-bold text-theme-neutral-dark"
          >
            <span>
              #
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb cGAXHi font-bold text-theme-neutral-dark"
          >
            <span>
              %
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb cGAXHi justify-center"
          >
            <div
              class="sc-AxirZ iQaTP text-xl text-theme-primary"
              height="1em"
              width="1em"
            >
              <svg>
                msq.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb cGAXHi font-bold text-theme-neutral-dark"
          >
            <span>
              ...
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb cGAXHi font-bold text-theme-neutral-dark"
          >
            <span>
              ...
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb cGAXHi font-bold text-theme-neutral-dark"
          >
            <span>
              ...
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb cGAXHi font-bold text-theme-neutral-dark"
          >
            <span>
              ...
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb yHtWA justify-end"
          >
            <button
              class="sc-AxjAm fPpool"
              color="primary"
              data-testid="DelegateRow__toggle-0"
              type="button"
            >
              Select
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`DelegateRow should render the selected delegate 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="sc-AxhUy iIfeGO group"
        data-testid="TableRow"
      >
        <td
          class="w-1"
        >
          <div
            class="sc-AxhCb hyGNjM"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK mr-4"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb jxcaLG font-bold"
          >
            <span>
              arkx
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb jxcaLG font-bold text-theme-neutral-dark"
          >
            <span>
              #
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb jxcaLG font-bold text-theme-neutral-dark"
          >
            <span>
              %
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb jxcaLG justify-center"
          >
            <div
              class="sc-AxirZ iQaTP text-xl text-theme-primary"
              height="1em"
              width="1em"
            >
              <svg>
                msq.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb jxcaLG font-bold text-theme-neutral-dark"
          >
            <span>
              ...
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb jxcaLG font-bold text-theme-neutral-dark"
          >
            <span>
              ...
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb jxcaLG font-bold text-theme-neutral-dark"
          >
            <span>
              ...
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb jxcaLG font-bold text-theme-neutral-dark"
          >
            <span>
              ...
            </span>
          </div>
        </td>
        <td>
          <div
            class="sc-AxhCb kCWYWc justify-end"
          >
            <button
              class="sc-AxjAm dFRFHH"
              color="danger"
              data-testid="DelegateRow__toggle-1"
              type="button"
            >
              Unselect
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
